# bayes-opt-demo

./: README.md  pyproject.toml
examples/: hartmann6_sobol.csv
src/bayes_opt_demo/: __init__.py  dataset.py  example_data.py  main.py  math.py  optimization.py  ui.py
src/bayes_opt_demo/data/: hartmann6_bayes_opt.csv
src/bayes_opt_demo/ui/: __init__.py  pages.py  suggestion_page.py  upload_page.py  visualization_page.py  widgets.py
