[project]
name = "bayes-opt-demo"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "streamlit>=1.32.2",
    "ax-platform>=0.3.7",
    "pandas>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipykernel>=6.29.3", "jupyter>=1.0.0"]

[tool.rye.scripts]
start = "streamlit run src/bayes_opt_demo/main.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bayes_opt_demo"]
