[project]
name = "bayes-opt-demo"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "streamlit>=1.32.2",
    "ax-platform>=0.3.7",
    "pandas>=2.2.1",
    "pygwalker==0.4.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipykernel>=6.29.3", "jupyter>=1.0.0"]

[tool.rye.scripts]
# ref: https://docs.streamlit.io/library/advanced-features/configuration
start = { cmd = "streamlit run src/bayes_opt_demo/main.py", env = { STREAMLIT_BROWSER_GATHER_USAGE_STATS = false } }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bayes_opt_demo"]
